--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,23 +1,20 @@
 version: '3.6'
 services:
   e2e-chrome:
-    image: "cypress-test"
+    image: "testing"   ##Docker image name
     environment:
         - CYPRESS_baseUrl=http://0.0.0.0:4200/
     command: ["testsmokechrome"] 
     network_mode: 'host'
     volumes:
-      - ./cypress/cypress/reports/chrome/videos:/cypressdocker/cypress/videos
-      - ./cypress/cypress/reports/chrome:/cypressdocker/cypress/reports
+      - ./cypress/cypress/reports/chrome/:/cypressdocker/cypress/reports
       
   e2e-edge:
-    image: "cypress-test"
+    image: "testing"  ##Docker image name
     environment:
         - CYPRESS_baseUrl=http://0.0.0.0:4200/
     command: ["testregedge"] 
     network_mode: 'host'
     volumes:
-      - ./cypress/cypress/reports/edge/videos:/cypressdocker/cypress/videos
-      - ./cypress/cypress/reports/edge:/cypressdocker/cypress/reports
-
-
+      - ./cypress/cypress/reports/edge/:/cypressdocker/cypress/reports
+    
