--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ services:
   e2e-chrome:
     image: "cypress-test"  
     environment:
-        - CYPRESS_baseUrl=https://www.youtube.com/
+        - CYPRESS_baseUrl=http://34.67.125.139:4200/
     command: ["testsmokechrome"] 
     network_mode: 'host'
     volumes:
@@ -12,7 +12,7 @@ services:
   e2e-edge:
     image: "cypress-test"  
     environment:
-        - CYPRESS_baseUrl=https://www.youtube.com/
+        - CYPRESS_baseUrl=http://34.67.125.139:4200/
     command: ["testregedge"] 
     network_mode: 'host'
     volumes:
